--- a/main.html
+++ b/main.html
@@ -8,10 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div style="width: 300px; background-color: lightblue; border: 15px solid blue; padding: 50px; margin: 20px;">
-        This is a demo of box model, try to replicate this box model in Html and Css and try to pass all the test cases.
+	 <div style="width: 300px; background-color: lightblue; border: 15px solid blue; padding: 50px; margin: 20px;">
+        This is a demo of box model try to replicate this box model in Html and Css and try to pass all the test cases.
     </div>
-    <script type="text/javascript" src="./script.js">
+    <script type="text/javascript" src="./script.js"></script>
 </script>
 
 </body>
